<resources>
    <string name="app_name">WeRock</string>
    <string name="server_url">https://172.105.251.232:3000/</string>

    <string name="explore">Explore</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string name="token">token</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="log_out">Log out</string>
    <string name="img_desc_logo">App Logo</string>
    <string name="dia_txt1">No Internet</string>
    <string name="dia_txt2">Please check your connection status and try again</string>
    <string name="dialog_close">Close</string>
    <string name="myprofilebtn">My Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">OK</string>
    <string name="action_settings">Settings</string>
    <string name="del_audio_txt">Delete Audio?</string>
    <string name="del_aud_dialog_desc">Are you sure you want to delete this clip?</string>
    <string name="del_clip_y">Yes</string>
    <string name="del_clip_no">No</string>
    <string name="clip_big">Audio clip too long!</string>
    <string name="clip_dialog_txt">Max audio clip length is 1 minute.</string>
    <string name="clip_dia_txt">Please upload a shorter clip :)</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_user_txt">Name:</string>
    <string name="hint_tags">#blues, #rock</string>
    <string name="tags_txt">Tags:</string>
    <string name="cliphint">Tap the button to add an audio clip\nThe maximum clip length is 1 minute</string>
    <string name="registration_txt">To get started, please register using the form below.</string>
    <string name="reg_txt">Welcome to WeRock!</string>
    <string name="prof_edit_addcliptxt">Add demo</string>
    <string name="prof_edit_img">Select profile picture:</string>
    <string name="edit_prof_addimg">Select</string>
    <string name="log_out_dia1">Log Out</string>
    <string name="logout_dia2">Are you sure you want to log out?</string>
    <string name="edit_prof_pic">Edit profile picture</string>
    <string name="add_link_desc">*You can also provide a link to a video of your performance:</string>
    <string name="mydemos_txt">My demos:</string>
    <string name="clip_tip_txt">*Two demos can be added (1 minute per demo max)</string>
    <string name="savechanges_txt">Save changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>